--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-hello rocket 
-<script type="text/javascript">
-	console.log ('Hello there friends');
-</script>
+<<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Rocket man</title>
+	<script type="text/javascript">
+		console.log ('Hello there friends');
+	</script>
+
+</head>
+<body>
+<h1>hello rocket</h1> 
+</body>
+</html>
+
+
