--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Rocket man</title>
-	<script type="text/javascript">
-		console.log ('Hello there friends');
-	</script>
+	<script type="text/javascript" src="js/script.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 <body>
-<h1>hello rocket</h1> 
+	<h1>hello rocket</h1>
+		<a href="#" onclick="doCoolStuff ();">Clique Moi</a>
+	<div class="coolStuff" id="coolStuff">
+		<p>Sooo Fun</p>
+	</div>
 </body>
 </html>
 
